# berita

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRONTEND.md  GEMINI.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  docker-compose.yml  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt
apps/public/: .env.example  next.config.ts  package.json
apps/web/: README.md  next.config.ts  package.json
apps/web/src/: middleware.ts
backend/: README.md  pyproject.toml  pyrightconfig.json  requirements.txt  security_report.json
backend/newsagent/: __init__.py
backend/newsagent/agents/: __init__.py  aggregator.py  draft_agent.py  editor_agent.py  memory_agent.py  orchestrator.py  publisher_agent.py  quality_gate.py
backend/newsagent/agents/fact_check/: __init__.py  evidence_retrieval.py  input_ingestion.py  query_generation.py  verdict_prediction.py
backend/newsagent/api/: __init__.py  auth.py  auth_utils.py  event_bus.py  main.py  schemas.py  store.py
backend/newsagent/api/routers/: articles.py  auth.py  public.py  users.py  ws.py
backend/newsagent/core/: config.py  events.py  graph.py  state.py
backend/newsagent/cost/: __init__.py  cost_tracker.py  token_budget.py
backend/newsagent/database/: __init__.py  kg_repository.py  repository.py  schema.sql
backend/newsagent/llm/: __init__.py  adapter_factory.py  base_adapter.py  claude_adapter.py  deepseek_adapter.py  fallback_adapter.py  gemini_adapter.py  hf_adapter.py  mistral_adapter.py  openai_adapter.py  openrouter_adapter.py  qwen_adapter.py
backend/newsagent/memory/: __init__.py  draft_memory.py  engine.py  verdict_cache.py
backend/newsagent/prompts/: __init__.py  aggregator.md  aggregator_user.md  draft_agent.md  editor_agent.md  evidence_retrieval_system.md  evidence_retrieval_user.md  publisher_agent.md  quality_gate.md  quality_gate_system.md  verdict_prediction_system.md  verdict_prediction_user.md
backend/newsagent/prompts/fact_check/: evidence_retrieval.md  input_ingestion.md  query_generation.md  verdict_prediction.md
backend/newsagent/rag/: __init__.py  pipeline.py  reranker.py  retriever.py  synthesizer.py
backend/newsagent/resilience/: __init__.py  circuit_breaker.py  retry_policy.py
backend/newsagent/security/: __init__.py  input_sanitizer.py  prompt_hardening.py  rate_limiter.py
backend/newsagent/tests/: conftest.py
backend/newsagent/tests/test_agents/: test_aggregator.py  test_draft_agent.py  test_editor_agent.py  test_fact_check.py  test_orchestrator.py  test_publisher_agent.py  test_quality_gate.py
backend/newsagent/tests/test_api/: test_main.py  test_store.py
backend/newsagent/tests/test_core/: test_graph.py  test_state.py
backend/newsagent/tests/test_cost/: test_cost_tracker.py  test_token_budget.py
backend/newsagent/tests/test_integration/: test_cms_publish.py  test_pipeline.py
backend/newsagent/tests/test_llm/: test_adapter_factory.py  test_claude_adapter.py  test_gemini_adapter.py  test_mistral_adapter.py  test_openai_adapter.py  test_qwen_adapter.py
backend/newsagent/tests/test_rag/: test_pipeline.py  test_reranker.py  test_retriever.py  test_synthesizer.py
backend/newsagent/tests/test_resilience/: test_fallback.py
backend/newsagent/tests/test_security/: test_input_sanitizer.py  test_prompt_hardening.py  test_rate_limiter.py
backend/newsagent/tests/test_tools/: test_base_tool.py  test_search_provider.py  test_web_search.py
backend/newsagent/tools/: __init__.py  base.py  cms_client.py  ner_extractor.py  search_factory.py  search_provider.py  serper_provider.py  web_search.py
docs/: AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  GLOSSARY.md  RESEARCH.md  TROUBLESHOOTING.md
docs/adr/: 0001-hmas-vs-flat-mas.md  0002-llm-adapter-pattern.md  0003-osint-deferred-to-phase-4.md  0004-memory-agent-integration.md
docs/sessions/: session-2026-05-26.md
newsagent/: __init__.py
newsagent/agents/: __init__.py  aggregator.py  draft_agent.py  editor_agent.py  orchestrator.py  publisher_agent.py  quality_gate.py
newsagent/agents/fact_check/: evidence_retrieval.py  input_ingestion.py  query_generation.py  verdict_prediction.py
newsagent/api/: main.py
newsagent/core/: __init__.py  config.py  graph.py  state.py
newsagent/cost/: token_budget.py
newsagent/llm/: adapter_factory.py  claude_adapter.py  gemini_adapter.py  mistral_adapter.py  openai_adapter.py  qwen_adapter.py
newsagent/prompts/: _system_guard.md  _user_wrapper.md  aggregator.md  draft_agent.md  editor_agent.md  input_ingestion_user.md  publisher_agent.md  quality_gate_user.md  query_generation_system.md  query_generation_user.md
newsagent/prompts/fact_check/: evidence_retrieval.md  input_ingestion.md  (+2 more)
newsagent/rag/: pipeline.py  reranker.py  retriever.py  synthesizer.py
newsagent/resilience/: circuit_breaker.py  dead_letter_queue.py  fallback.py  retry_policy.py
newsagent/security/: input_sanitizer.py  rate_limiter.py
newsagent/tests/: test_scoring.py
newsagent/tools/: __init__.py  cms_client.py  scoring.py  tavily_provider.py  web_search.py
newsagent/utils/: prompt_loader.py
(+77 files in other folders)
