[project]
name = "newsagent"
version = "0.1.0"
description = "Multi-agent system for automated news production"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
]

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
exclude = [
    ".venv/",
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests", "newsagent/tests"]
asyncio_mode = "strict"
