[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["newsagent*"]

[project]
name = "newsagent"
version = "0.1.0"
description = "Multi-agent system for automated news production"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.48.0",
    "openai>=1.55.0",
    "google-genai>=1.0.0",
    "mistralai>=1.0.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "redis[hiredis]>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.34.0",
    "huggingface-hub>=1.16.1",
    "pyjwt>=2.13.0",
    "cryptography>=48.0.0",
    "bcrypt>=4.2.0",
]

[project.optional-dependencies]
ner = [
    "spacy>=3.8.0",
]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
newsagent-api = "newsagent.api.main:app"

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM", "RET", "ARG", "PT", "C4", "ASYNC", "RUF", "PERF"]

[tool.ruff.lint.per-file-ignores]
"newsagent/tests/*" = ["ARG", "ASYNC", "PERF", "PT"]
"newsagent/llm/*" = ["ASYNC", "ARG"]
"newsagent/memory/*" = ["ASYNC"]
"newsagent/rag/*" = ["ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests", "newsagent/tests"]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
warn_unused_configs = true
exclude = [
    ".venv/",
    "tests/",
]

[[tool.mypy.overrides]]
module = ["newsagent.tools.ner_extractor"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["newsagent.tools.*"]
ignore_missing_imports = true
